[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mimic_cxr_jpg_loader"
version = "0.0.8"
authors = [
  { name="Filipe Campos", email="filipepcampos24@gmail.com" },
]
description = "A package which facilitates loading data from the MIMIC-CXR-JPG dataset"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "pandas",
  "pillow"
]

[project.urls]
Homepage = "https://github.com/filipepcampos/mimic-cxr-jpg-loader"
Issues = "https://github.com/filipepcampos/mimic-cxr-jpg-loader/issues"
